# power-plant

./: .all-contributorsrc  .gitignore  .log4brains.yml  .mcp.json  .nxignore  Cargo.toml  README.md  devenv.nix  devenv.yaml  eslint.config.mjs  lefthook.yml  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  socket.yaml  storm-workspace.json  tsconfig.base.json  tsconfig.json  vitest.workspace.ts
.agents/skills/graphql-schema/: SKILL.md
.agents/skills/graphql-schema/references/: errors.md  pagination.md  security.md  types.md
.agents/skills/json-schema-lookup/: SKILL.md
.agents/skills/openapi-spec-generation/references/: code-first-and-tooling.md
.agents/skills/rust-best-practices/references/: chapter_01.md  chapter_02.md  chapter_03.md  chapter_04.md  chapter_05.md  chapter_06.md  chapter_08.md
.agents/skills/typescript-mcp-server-generator/: SKILL.md
.agents/skills/valibot/: SKILL.md
.agents/skills/vitest/references/: advanced-environments.md  advanced-projects.md  advanced-type-testing.md  advanced-vi.md  core-cli.md  core-config.md  core-describe.md  core-expect.md  core-hooks.md  core-test-api.md  features-concurrency.md  features-context.md  features-coverage.md  features-filtering.md  features-mocking.md  features-snapshots.md
.agents/skills/writing-json-schemas/: SKILL.md
.agents/skills/zod/assets/templates/: _template.md
.agents/skills/zod/references/: compose-intersection.md  compose-lazy-recursive.md  compose-pipe.md  compose-preprocess.md  compose-shared-schemas.md  error-avoid-throwing-in-refine.md  error-custom-messages.md  error-i18n.md  error-path-for-nested.md  error-use-flatten.md  object-discriminated-unions.md  object-extend-for-composition.md  object-optional-vs-nullable.md  object-partial-for-updates.md  object-pick-omit.md  object-strict-vs-strip.md  parse-async-for-async-refinements.md  parse-avoid-double-validation.md  parse-handle-all-issues.md  parse-never-trust-json.md  parse-use-safeparse.md  parse-validate-early.md  perf-arrays.md  perf-avoid-dynamic-creation.md  perf-cache-schemas.md  perf-lazy-loading.md  perf-zod-mini.md  refine-add-path.md  refine-catch.md  refine-defaults.md  refine-transform-coerce.md  refine-vs-superrefine.md  schema-avoid-optional-abuse.md  schema-coercion-for-form-data.md  schema-string-validations.md  schema-use-enums.md  schema-use-primitives-correctly.md  schema-use-unknown-not-any.md  type-branded-types.md  type-enable-strict-mode.md  (+3 more)
.cargo/: config.toml
.claude/: settings.json
.claude/agents/: architecture-designer.md  code-reviewer.md  devops-specialist.md  documentation-writer.md  fullstack-developer.md
.claude/skills/: json-schema-lookup
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  documentation.yml  feature-request.yml
.github/instructions/: context7.instructions.md
.github/workflows/: all-contributors.yml  codeql.yml  contributors.yml  release.yml
crates/bindings/: Cargo.toml  README.md  build.rs  project.json
crates/bindings/src/: binding_engine.rs  lib.rs
crates/bindings/src/types/: binding_input.rs  binding_log.rs  binding_log_level.rs  binding_options.rs  binding_output.rs  binding_string_or_regex.rs  js_callback.rs  js_regex.rs  mod.rs
crates/bindings/src/utils/: mod.rs  to_binding_error.rs  trace_subscriber_guard.rs
crates/common/: Cargo.toml  README.md  project.json
crates/common/src/: lib.rs
crates/common/src/types/: context.rs  input.rs  mod.rs  normalized_options.rs  options.rs  output.rs  recall_output.rs
crates/core/: Cargo.toml  README.md  project.json
crates/core/src/: engine.rs  lib.rs
crates/error/: Cargo.toml  README.md  project.json
crates/error/src/: diagnostic.rs  lib.rs
crates/error/src/errors/: mod.rs  plugin.rs
crates/error/src/issues/: circular_dependency.rs  mod.rs  napi_error.rs  path_is_not_valid_utf8.rs  plugin_error.rs  unable_to_read_dir.rs  unable_to_read_file.rs  unable_to_strip_root_prefix.rs  unhandleable_error.rs
crates/error/src/types/: diagnostic_options.rs  issue_kind.rs  issue_kind_switcher.rs  mod.rs  power_plant_diagnostic.rs  severity.rs
crates/error/src/utils/: downcast_napi_error_diagnostics.rs  filter_out_disabled_diagnostics.rs  is_context_too_long.rs  mod.rs
crates/models/: Cargo.toml  README.md  project.json
crates/models/src/: data_point.rs  document.rs  execution.rs  lib.rs  source_code.rs
crates/storage/: Cargo.toml  README.md  project.json
crates/storage/src/: error.rs  execution_metadata.rs  execution_store.rs  fs_execution_store.rs  in_memory_execution_store.rs  indexed_execution_store.rs  lib.rs
crates/storage/src/ladybug/: index.rs
crates/tracing/: Cargo.toml  README.md  project.json
crates/tracing/src/: lib.rs  tracing.rs
crates/utils/: Cargo.toml  README.md  project.json
crates/utils/src/: data_url.rs  debug.rs  lib.rs  mime.rs  pattern_filter.rs  stabilize_id.rs
docs/book/: book.toml  package.json
docs/book/src/: SUMMARY.md  intro.md
docs/book/src/architecture/: intro.md
docs/book/src/cli/: cli.md  help.py  power-plant.md  update.sh
docs/book/src/cli/earthquake/: run.md
docs/book/src/cli/power-plant/: run.md
docs/book/src/installation/: installation.md
docs/book/src/run/: run_power_plant.md
docs/book/src/theme/: head.hbs
tools/config/: .gitpod.yml  README.md  package.json  project.json  tsdown.shared.ts  verdaccio.yml  zizmor.yml
tools/cspell/: README.md  misc-phrases.txt  misc.txt  package.json  rust-phrases.txt
tools/errors/: README.md  package.json
tools/readme-templates/: README.footer.md  README.header.md  package.json  project.json
tools/scripts/: README.md  package.json
tools/scripts/src/: bootstrap.mjs  build-native.mjs  build.mjs  clean.mjs  format.mjs  lint.mjs  nuke.mjs  release.mjs  typecheck.mjs  update-storm.mjs
