[workspace]
members  = ["crates/*"]
resolver = "3"

[workspace.package]
authors       = ["storm-software", "pat-sullivan"]
categories    = ["config", "development-tools"]
description   = "☢️ Text generation that gives your AI superpowers."
documentation = "https://docs.stormsoftware.com/projects/power-plant"
edition       = "2024"
homepage      = "https://stormsoftware.com/projects/power-plant"
keywords      = ["power-plant", "storm-software", "monorepo"]
license       = "Apache-2.0"
readme        = "./README.md"
repository    = "https://github.com/storm-software/power-plant"
version       = "0.1.0"

[workspace.lints.rust]
dead_code                     = "allow"
missing-debug-implementations = "allow"
missing-docs                  = "allow"
rust-2018-idioms              = "deny"
unnameable-types              = "warn"
unreachable-pub               = "warn"
unused-imports                = "deny"
unused-must-use               = "deny"

[workspace.lints.rustdoc]
all = "allow"

[workspace.lints.clippy]
# Guidelines
# - We should only disable rules globally if they are either false positives, chaotic, or does not make sense.
# - Group are enabled with priority -1, so we could easily override some specific rules.
#   - https://doc.rust-lang.org/stable/cargo/reference/manifest.html#the-lints-section

# --- restriction https://doc.rust-lang.org/clippy/usage.html#clippyrestriction
allow_attributes = "deny"
dbg_macro        = "deny"
print_stdout     = "deny"

# I like the explicitness of this rule as it removes confusion around `clone`.
# This increases readability, avoids `clone` mindlessly and heap allocating on accident.
clone_on_ref_ptr                = "deny"
empty_drop                      = "deny"
exit                            = "deny"
filetype_is_file                = "deny"
get_unwrap                      = "deny"
rc_buffer                       = "deny"
rc_mutex                        = "deny"
rest_pat_in_fully_bound_structs = "deny"
unnecessary_safety_comment      = "deny"

# --- pedantic #https://doc.rust-lang.org/clippy/usage.html#clippypedantic
# To write the best rust code, pedantic group is enabled by default.
case_sensitive_file_extension_comparisons = "allow"
pedantic                                  = { level = "deny", priority = -1 }

# Wizards, naming is too hard.
module_inception        = "allow"
module_name_repetitions = "allow"
similar_names           = "allow"

# Forwarding `Result` is a common pattern, this rule is too pedantic.
missing_errors_doc = "allow"

# #[must_use] is creating too much noise for this codebase, it does not add much value except nagging
# the programmer to add a #[must_use] after clippy has been run.
# Having #[must_use] everywhere also hinders readability.
must_use_candidate = "allow"

doc_markdown         = "allow"
missing_const_for_fn = "allow"
missing_panics_doc   = "allow"
needless_for_each    = "allow"
new_without_default  = "allow"

# Order doesn't really matter https://rust-lang.github.io/rust-clippy/master/index.html#/inconsistent_struct_constructor
inconsistent_struct_constructor = "allow"

# Single match is equally readable as if/else. https://rust-lang.github.io/rust-clippy/master/index.html#/single_match
single_match      = "allow"
single_match_else = "allow"

# Though the following are nursery rules, they’re still useful.
debug_assert_with_mut_call    = "warn"
iter_on_single_items          = "warn"
needless_pass_by_ref_mut      = "warn"
redundant_clone               = "warn"
redundant_pub_crate           = "warn"
significant_drop_in_scrutinee = "warn"
unused_peekable               = "warn"

# Rewriting `unwrap_or` to `map_or` requires to annotate type explicitly which is cumbersome
collapsible_if = "allow"
map_unwrap_or  = "allow"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Declare dependencies used across workspace packages requires single version bump.
# ref: https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#inheriting-a-dependency-from-a-workspace
[workspace.dependencies]
# Power Plant
power-plant-bindings = { path = "./crates/bindings" }
power-plant-common   = { path = "./crates/common" }
power-plant-core     = { path = "./crates/core" }
power-plant-error    = { path = "./crates/error" }
power-plant-models   = { path = "./crates/models" }
power-plant-tracing  = { path = "./crates/tracing" }
power-plant-utils    = { path = "./crates/utils" }

# Storm Software
storm-config = "0.27.4"

anyhow             = "1.0.98"
arcstr             = { version = "1.2.0", default-features = false }
ariadne            = { package = "rolldown-ariadne", version = "0.5.3" }
async-channel      = "2.5.0"
async-scoped       = { version = "0.9.0", features = ["use-tokio"] }
async-trait        = "0.1.89"
base-encode        = "0.3.1"
base64-simd        = "0.8.0"
bitflags           = "2.10.0"
blake3             = "1.8.2"
camino             = { version = "1.2.1", features = ["serde1"] }
chrono             = "0.4.30"
cow-utils          = "0.1.3"
dashmap            = "6.1.0"
derive_more        = { version = "2.0.1", features = ["debug"] }
fast-glob          = "1.0.0"
flate2             = { version = "=1.1.2", features = ["zlib-rs"] }
form_urlencoded    = "1.2.2"
futures            = "0.3.31"
infer              = "0.19.0"
itertools          = "0.14.0"
memchr             = "2.7.6"
mimalloc-safe      = "0.1.52"
mime               = "0.3.17"
nom                = { version = "8.0.0", features = ["std"] }
num_cpus           = "1.17.0"
rayon              = "1.7.0"
regex              = "1.12.2"
regress            = "0.10.5"
ropey              = "1.6.1"
rustc-hash         = { version = "2.1.1" }
schemars           = "1.1.0"
serde              = { version = "1.0.219", features = ["derive"] }
serde_json         = "1.0.140"
simdutf8           = "0.1.5"
sugar_path         = "1.2.1"
tokio              = { version = "1.48.0", default-features = false }
tracing            = { version = "0.1.41", features = ["valuable"] }
tracing-chrome     = "0.7.2"
tracing-subscriber = { version = "0.3.19", default-features = false }
ts-rs              = "11.1.0"
typedmap           = { version = "0.6.0", features = ["dashmap"] }
url                = "2.5.4"
urlencoding        = "2.1.3"
uuid               = { version = "1.4.2", features = ["v4"] }
walkdir            = "2.5.0"
xxhash-rust        = "0.8.15"

# oxc crates with the same version
oxc = { version = "0.97.0", features = [
  "ast_visit",
  "transformer",
  "minifier",
  "mangler",
  "semantic",
  "codegen",
  "serialize",
  "isolated_declarations",
  "regular_expression",
  "cfg"
] }
oxc_allocator = { version = "0.97.0", features = ["pool"] }
oxc_ecmascript = { version = "0.97.0" }
oxc_minify_napi = { version = "0.97.0" }
oxc_parser_napi = { version = "0.97.0" }
oxc_transform_napi = { version = "0.97.0" }
oxc_traverse = { version = "0.97.0" }

# oxc crates in their own repos
# Versions must be relaxed for usage in oxc.
# Please update with `cargo update oxc_resolver oxc_resolver_napi oxc_sourcemap oxc_index oxc-browserslist`
oxc_index         = { version = "4", features = ["rayon", "serde"] }
oxc_resolver      = { version = "11.13.2" }
oxc_resolver_napi = { version = "11.13.2" }
oxc_sourcemap     = { version = "6.0.1" }

# napi
napi = { version = "3.0.0", features = [
  "async",
  "anyhow",
  "napi4",
  "tokio_rt"
] }
napi-build = { version = "2.2.2" }
napi-derive = { version = "3.0.0", default-features = false, features = [
  "type-def"
] }

# [patch.crates-io]
# flate2 = { git = "https://github.com/dmccloskey/flate2-rs" }

[profile.dev]
debug       = "line-tables-only"
incremental = true

[profile.release]
codegen-units = 1
debug         = false
lto           = "fat"
opt-level     = 3
strip         = "symbols"

[profile.release-debug]
debug    = true
inherits = "release"

[profile.release-debug-fast]
debug    = true
inherits = "release"
strip    = "none"

[profile.prod]
debug    = "line-tables-only"
inherits = "release"
lto      = "thin"
strip    = false

[profile.release-wasi]
inherits  = "release"
opt-level = "s"
# napi-rs generates *-debug.*.wasm files with these information
# it will strip these information for non-debug files
debug = "full"
strip = "none"

# [profile.prod]
# codegen-units = 1
# incremental = false
# inherits = "release"
# lto = "fat"
