[package]
authors = { workspace = true }
categories = { workspace = true }
description = "☢️ Shared functionality and type definitions used across the Power Plant runtime."
documentation = "https://docs.rs/power-plant"
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
name = "power-plant-common"
publish = false
readme = "./README.md"
repository = { workspace = true }
version = "0.1.0"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]

# Power Plant
power-plant-error = { workspace = true }
power-plant-models = { workspace = true }
power-plant-utils = { workspace = true }

anyhow = { workspace = true }
arcstr = { workspace = true }
ariadne = { workspace = true }
blake3 = { workspace = true }
camino = { workspace = true }
derive_more = { workspace = true }
oxc_index = { workspace = true }
regex = { workspace = true }
rustc-hash = { workspace = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true }
storm-config = { workspace = true }
sugar_path = { workspace = true }
url = { workspace = true }

[features]
default = ["serde"]
deserialize_bundler_options = ["dep:schemars", "dep:serde"]
serde = ["dep:serde", "oxc_index/serde"]
