[package]
authors = { workspace = true }
categories = { workspace = true }
description = "☢️ Text generation that gives your AI superpowers."
documentation = "https://docs.rs/power-plant"
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
name = "power-plant-core"
publish = true
readme = "./README.md"
repository = { workspace = true }
version = "0.1.0"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
# Power Plant
power-plant-common = { workspace = true }
power-plant-error = { workspace = true }
power-plant-tracing = { workspace = true }
power-plant-utils = { workspace = true }

# Storm Software
storm-config = { workspace = true }

anyhow = { workspace = true }
arcstr = { workspace = true }
ariadne = { workspace = true }
blake3 = { workspace = true }
camino = { workspace = true }
derive_more = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
rustc-hash = { workspace = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "sync", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["serde"]
experimental = []
serde = ["dep:serde"]
testing = []

[package.metadata.cargo-shear]
# `serde_json` is used in `trace_action` macro.
ignored = ["serde", "serde_json"]
