[package]
authors = { workspace = true }
categories = { workspace = true }
description = "☢️ Data models used across the Power Plant ecosystem."
documentation = "https://docs.rs/power-plant"
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
name = "power-plant-models"
publish = false
readme = "./README.md"
repository = { workspace = true }
version = "0.1.0"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]

# Power Plant
power-plant-error = { workspace = true }
power-plant-utils = { workspace = true }

blake3 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
oxc_index = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[features]
default = ["serde"]
deserialize_bundler_options = ["dep:schemars", "dep:serde"]
serde = ["dep:serde", "oxc_index/serde"]
